--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "apollo-server-express": "^3.4.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "dot-env": "^0.0.1",
+    "dotenv": "^10.0.0",
     "express-session": "^1.17.2",
     "graphql": "^15.6.1",
     "graphql-tools": "^8.2.0",
