--- a/env/development.env
+++ b/env/development.env
@@ -1,5 +1,5 @@
-DB_HOST=localhost
+DB_HOST=frankfurt-postgres.render.com
 DB_PORT=5432
 DB_USERNAME=jamsy
-DB_PASSWORD=jamsy
+DB_PASSWORD=cB2YbWjtHSlHqNeVqUQgNTck4ZmG4VdQ
 DB_DATABASE=dormdash
