--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/faker": "^5.5.9",
     "@types/passport-local": "^1.0.34",
     "apollo-server-express": "^3.4.0",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "express-session": "^1.17.2",
